Fix header test, link being covered by homepage div

--- a/src/Components/Homepage/Homepage.scss
+++ b/src/Components/Homepage/Homepage.scss
@@ -63,7 +63,7 @@
 
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 800px) {
 
   .intro-container {
     margin-top: 1rem;
